--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <body>
   <svg id="tallboy" viewBox="-0.5 -0.5 1 11">
-    <path d="M 0 10 V 0" stroke="url(#g)" />
+    <path d="M 0 10 V 0"/>
   </svg>
 </body>
 
@@ -24,11 +24,40 @@
 
   path {
     stroke: black;
-    stroke-linecap: round;
     stroke-width: 1;
   }
 </style>
 
 <script>
+  const audioContext = new AudioContext();
+  const analyser = audioContext.createAnalyser();
+
+  const getSamples = () => {
+    const samples = new Float32Array(128);
+    analyser.getFloatTimeDomainData(samples);
+    return samples;
+  };
+
+  const animate = () => {
+    const samples = getSamples();
+
+    const num = rms(samples) * 30;
+
+    document.querySelector('#tallboy > path').setAttribute('d', `M 0 10 V ${10 - num}`)
+
+    requestAnimationFrame(animate)
+
+  }
+
+  const rms = (samples) =>
+  [...samples]
+    .map(Math.abs)
+    .reduce((a, b) => a + b, 0) / samples.length;
+
+  navigator.mediaDevices
+    .getUserMedia({ audio: true, video: false })
+    .then((stream) => audioContext.createMediaStreamSource(stream))
+    .then((streamSource) => streamSource.connect(analyser))
+    .then(animate);
 
 </script>
